# cap-pie

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-compose.yml.example  index.html  pyproject.toml
backend/: .dockerignore  .env.billing.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml.example  fetch_config_files.sh  pyproject.toml  pytest.ini
backend/datasets/: refer_classifier_examples.en.jsonl  render_classifier_examples.en.jsonl  semantic_intent_examples.en.jsonl
backend/documentation/examples/nl/: blocks.txt  use_cases.txt
backend/documentation/examples/sparql/: blocks.rq  def_epoch.rq  status.rq  transactions.rq
backend/documentation/nl_queries/: natural_language.md
backend/documentation/ontology/: class-blockchainaccount.html  class-blockchainblock.html  class-blockchainblockchain.html  class-blockchainchainselectionrule.html  class-blockchainconsensusprotocol.html  class-blockchainconsensusstate.html  class-blockchainfungibletoken.html  class-blockchainleadershipproof.html  class-blockchainmetadata.html  class-blockchainnativetoken.html  class-blockchainnft.html  class-blockchainnode.html  class-blockchainoffchaindata.html  class-blockchainproofofstake.html  class-blockchainproofofwork.html  class-blockchainsmartcontract.html  class-blockchaintoken.html  class-blockchaintokenamount.html  class-blockchaintransaction.html  class-blockchaintransactioninput.html  class-blockchainvalidationrule.html  class-cardanoadapots.html  class-cardanoassetmint.html  class-cardanoassetpolicy.html  class-cardanocnt.html  class-cardanocoldcredential.html  class-cardanocollateralinput.html  class-cardanocollateraloutput.html  class-cardanocommittee.html  class-cardanocommitteecredential.html  class-cardanocommitteemember.html  class-cardanoconstitution.html  class-cardanocostmodel.html  class-cardanodatum.html  class-cardanodrep.html  class-cardanodrepregistration.html  class-cardanoeconomicparameters.html  class-cardanoepoch.html  class-cardanoepochparameters.html  class-cardanoepochstake.html  (+157 more)
backend/documentation/tests/: tests.md
backend/evaluation/: README.evaluation.md
backend/evaluation/datasets/raw/: msgs.txt
backend/evaluation/runs/run_001/: per_example.jsonl  summary.json  summary.md
backend/evaluation/scripts/: generate_dataset.py  run_evaluation.py
backend/evaluation/src/dataset/: dataset_builder.py  query_mapping_parser.py  tag_inferer.py  variant_generators.py
backend/evaluation/src/metrics/: generation_metrics.py  latency.py  report.py  retrieval_metrics.py
backend/evaluation/src/runner/: ablations.py  evaluate.py  pipeline_wrapper.py
backend/src/cap/: config.py  main.py  telemetry.py
backend/src/cap/api/: auth.py  beta_program.py  billing.py  billing_admin.py  cache_admin.py  conversation.py  conversation_admin.py  dashboard.py  demo_nl.py  metrics.py  models.py  nl_query.py  notifications_admin.py  share.py  share_i18n.json  sparql_query.py  system_admin.py  user.py  user_admin.py  waitlist.py  waitlist_admin.py
backend/src/cap/chains/: chain_interface.py
backend/src/cap/core/: auth_dependencies.py  google_oauth.py  security.py
backend/src/cap/database/: model.py  session.py
backend/src/cap/federated/: asset_schema.py  federated_result_processor.py  models.py  planner.py  service.py  sql_service.py  sql_util.py
backend/src/cap/mailing/: email_service.py  event_triggers.py  translation.json
backend/src/cap/rdf/: triplestore.py
backend/src/ontologies/: cardano.ttl
backend/src/tests/: conftest.py  fix_sparql_tests.py  kvr_tests.py  lemma_tests.py  nl_cache_tests.py  nl_normalization_tests.py  nl_query_tests.py  oc_tests.py  sparql_endpoint_tests.py  sparql_generation_tests.py  sparql_service_tests.py  sparql_tests.py  sql_service_tests.py  test_api.py  test_sparql_dates.py  vega_table_tests.py
offchain-etl/: .gitignore  CMakeLists.txt  README.md
offchain-etl/config/: asset_mapping.csv  asset_relationships.csv  config.example.json  config.local.json  governance_sources.csv
offchain-etl/include/cap/: Config.hpp  Db.hpp  Http.hpp  IndicatorSync.hpp  Json.hpp  OhlcvSync.hpp
offchain-etl/scripts/: run-local.sh
offchain-etl/sql/: schema.sql
offchain-etl/src/: Config.cpp  Db.cpp  GovernanceSync.cpp  Http.cpp  OhlcvSync.cpp  main.cpp
offchain-etl/tests/: smoke-build.sh
sql/: schema.sql
(+636 files in other folders)
